// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta component renders correctly with all params 1`] = `
Array [
  <title>
    The Title On The Meta
  </title>,
  <link
    href="http://test.com/test"
    rel="canonical"
  />,
  <meta
    content="The Description on the meta"
    name="description"
  />,
  <meta
    content="width=device-width, initial-scale=1, shrink-to-fit=no"
    name="viewport"
  />,
  <link
    href="/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="/site.webmanifest"
    rel="manifest"
  />,
  <meta
    content="article"
    property="og:type"
  />,
  <meta
    content="The site title"
    property="og:title"
  />,
  <meta
    content="The Description on the meta"
    property="og:description"
  />,
  <meta
    content="http://test.com/test"
    property="og:url"
  />,
  <meta
    content="/image-custom.png"
    property="og:image"
  />,
  <meta
    content="The site title"
    property="og:site_name"
  />,
  <meta
    content="https://asiermarques.com"
    property="article:author"
  />,
]
`;

exports[`Meta component renders correctly with default site params 1`] = `
Array [
  <title>
    The Title On The Meta
  </title>,
  <link
    href="http://test.com"
    rel="canonical"
  />,
  <meta
    content="The Description on the meta"
    name="description"
  />,
  <meta
    content="width=device-width, initial-scale=1, shrink-to-fit=no"
    name="viewport"
  />,
  <link
    href="/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="/site.webmanifest"
    rel="manifest"
  />,
  <meta
    content="article"
    property="og:type"
  />,
  <meta
    content="The site title"
    property="og:title"
  />,
  <meta
    content="The Description on the meta"
    property="og:description"
  />,
  <meta
    content="http://test.com"
    property="og:url"
  />,
  <meta
    content="/the-image.png"
    property="og:image"
  />,
  <meta
    content="The site title"
    property="og:site_name"
  />,
  <meta
    content="https://asiermarques.com"
    property="article:author"
  />,
]
`;
